--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,6 +31,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Instrumentation Tests
+        run: chmod +x gradlew
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 31
