--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,12 +26,12 @@ jobs:
       run: ./gradlew build test
 
   android_tests:
-    runs-on: [ macos-latest ]
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Instrumentation Tests
+      - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      - name: Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 31
