--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,5 +34,7 @@ jobs:
       - name: Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 31
-          script: ./gradlew connectedAndroidTest
+          api-level: 29
+          arch: x86
+          disable-animations: true
+          script: ./gradlew connectedAndroidTest --stacktrace
