--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build_unit_tests:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -26,9 +25,17 @@ jobs:
       run: ./gradlew build test
 
   android_tests:
-    runs-on: macos-latest
+        runs-on: macos-latest
+
     steps:
       - uses: actions/checkout@v2
+      - name: set up JDK 11
+          uses: actions/setup-java@v2
+          with:
+            java-version: '11'
+            distribution: 'temurin'
+            cache: gradle
+            
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Instrumentation Tests
