--- a/sbbml/build.gradle
+++ b/sbbml/build.gradle
@@ -15,8 +15,8 @@ android {
         renderscriptSupportModeEnabled true
 
         ndk {
-            ndk.abiFilters 'armeabi-v7a','arm64-v8a'
-            // use this to compile for emulator,'x86','x86_64', removed because they need a lot of space
+            ndk.abiFilters 'armeabi-v7a','arm64-v8a', 'x86', 'x86_64'
+            // 'x86','x86_64', are for emulator due to instrumentation tests
         }
         externalNativeBuild {
             cmake {
