--- a/sbbml/build.gradle
+++ b/sbbml/build.gradle
@@ -1,5 +1,8 @@
+apply plugin: 'maven-publish'
+apply plugin: 'signing'
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'org.jetbrains.dokka'
 apply from: '../version-code.gradle'
 
 android {
@@ -58,6 +61,86 @@ android {
     }
 }
 
+// see http://blog.joda.org/2014/02/turning-off-doclint-in-jdk-8-javadoc.html
+if (JavaVersion.current().isJava8Compatible()) {
+    allprojects {
+        tasks.withType(Javadoc) {
+            options.addStringOption('Xdoclint:none', '-quiet')
+        }
+    }
+}
+
+dokkaHtml.configure {
+    dokkaSourceSets {
+        named("main") {
+            noAndroidSdkLink.set(false)
+        }
+    }
+}
+
+task androidJavadocsJar(type: Jar, dependsOn: dokkaHtml) {
+    description 'Generates a JavaDoc archive (.jar) from the JavaDoc files'
+    from "$buildDir/dokka"
+}
+
+task androidSourcesJar(type: Jar) {
+    archiveClassifier.set('sources')
+        from android.sourceSets.main.java.srcDirs
+        from android.sourceSets.main.kotlin.srcDirs
+}
+
+artifacts {
+    archives androidSourcesJar, androidJavadocsJar
+}
+
+signing {
+    useInMemoryPgpKeys(
+            System.getenv("PGP_KEYID"),
+            System.getenv("PGP_KEY"),
+            System.getenv("PGP_PASSWORD"),
+    )
+    sign publishing.publications
+}
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+            username = System.getenv("SONATYPE_USERNAME")
+            password = System.getenv("SONATYPE_PASSWORD")
+            stagingProfileId = System.getenv("SONATYPE_STAGINGPROFILEID")
+        }
+    }
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            aar(MavenPublication) {
+                groupId 'ch.sbb.mobile.ml'
+                version PUBLISH_VERSION
+                artifactId 'sbbml'
+                artifact("$buildDir/outputs/aar/sbbml-release.aar")
+
+                pom.withXml {
+                    def dependenciesNode = asNode().appendNode('dependencies')
+                    //Iterate over the implementation dependencies (we don't want the test ones), adding a <dependency> node for each
+                    configurations.implementation.allDependencies.each {
+                        def dependencyNode = dependenciesNode.appendNode('dependency')
+                        dependencyNode.appendNode('groupId', it.group)
+                        dependencyNode.appendNode('artifactId', it.name)
+                        dependencyNode.appendNode('version', it.version)
+                    }
+                }
+                artifact androidSourcesJar
+                artifact androidJavadocsJar
+            }
+        }
+    }
+}
+
+
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -74,4 +157,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
+
+    dokkaHtmlPlugin "org.jetbrains.dokka:kotlin-as-java-plugin:$dokka_version"
 }
