--- a/.github/workflows/publish_to_maven.yml
+++ b/.github/workflows/publish_to_maven.yml
@@ -22,7 +22,7 @@ jobs:
 
     # Builds the release artifacts of the library
     - name: Release build
-      run: ./gradlew assembleRelease
+      run: ./gradlew sbbml:assembleRelease
 
     # Generates other artifacts 
     #- name: Source jar and dokka
@@ -30,7 +30,7 @@ jobs:
 
     # Runs upload, and then closes & releases the repository
     - name: Publish to MavenCentral
-      run: ./gradlew publish # use this cmd to avoid nexus release approve: --max-workers 1 closeAndReleaseSonatypeStagingRepository
+      run: ./gradlew publishToSonatype # use this cmd to avoid nexus release approve: --max-workers 1 closeAndReleaseSonatypeStagingRepository
       env:
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
         SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
