--- a/.github/workflows/publish_to_maven.yml
+++ b/.github/workflows/publish_to_maven.yml
@@ -30,10 +30,11 @@ jobs:
 
     # Runs upload, and then closes & releases the repository
     - name: Publish to MavenCentral
-      run: ./gradlew publishToSonatype # use this cmd to avoid nexus release approve: --max-workers 1 closeAndReleaseSonatypeStagingRepository
+      run: ./gradlew publishMavenPublicationToSonatypeRepository # use this cmd to avoid nexus release approve: --max-workers 1 closeAndReleaseSonatypeStagingRepository
       env:
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
         SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+        SONATYPE_STAGINGPROFILEID: ${{ secrets.SONATYPE_STAGINGPROFILEID }}
         PGP_KEY: ${{ secrets.PGP_KEY }}
         PGP_KEYID: ${{ secrets.PGP_KEYID }}
         PGP_PASSWORD: ${{ secrets.PGP_PASSWORD }}
