--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 buildscript {
-
     ext.kotlin_version = '1.5.30'
     ext.dokka_version = '1.5.0'
 
@@ -30,8 +29,11 @@ allprojects {
     }
 }
 
+/*
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-apply from: "${rootDir}/sbbml_nexus_publish.gradle"
+ */
+
+apply from: "${rootDir}/scripts/publish_root.gradle"
