--- a/sbbml/build.gradle
+++ b/sbbml/build.gradle
@@ -1,10 +1,17 @@
-apply plugin: 'maven-publish'
-apply plugin: 'signing'
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'org.jetbrains.dokka'
 
 apply from: '../version-code.gradle'
+
+ext {
+    // Provide your own coordinates here
+    PUBLISH_GROUP_ID = 'ch.sbb.mobile.ml'
+    PUBLISH_VERSION = PUBLISH_VERSION
+    PUBLISH_ARTIFACT_ID = 'sbbml'
+}
+
+apply from: "${rootProject.projectDir}/scripts/publish_module.gradle"
+
 
 android {
     compileSdkVersion 31
@@ -71,63 +78,6 @@ if (JavaVersion.current().isJava8Compatible()) {
     }
 }
 
-dokkaHtml.configure {
-    dokkaSourceSets {
-        named("main") {
-            noAndroidSdkLink.set(false)
-        }
-    }
-}
-
-task androidJavadocsJar(type: Jar, dependsOn: dokkaHtml) {
-    description 'Generates a JavaDoc archive (.jar) from the JavaDoc files'
-    from "$buildDir/dokka"
-}
-
-task androidSourcesJar(type: Jar) {
-    archiveClassifier.set('sources')
-        from android.sourceSets.main.java.srcDirs
-        from android.sourceSets.main.kotlin.srcDirs
-}
-
-artifacts {
-    archives androidSourcesJar, androidJavadocsJar
-}
-
-afterEvaluate{
-    publishing {
-        publications {
-            maven(MavenPublication)  {
-                groupId 'ch.sbb.mobile.ml'
-                version PUBLISH_VERSION
-                artifactId 'sbbml'
-                artifact("$buildDir/outputs/aar/sbbml-release.aar")
-
-                pom.withXml {
-                    def dependenciesNode = asNode().appendNode('dependencies')
-                    //Iterate over the implementation dependencies (we don't want the test ones), adding a <dependency> node for each
-                    configurations.implementation.allDependencies.each {
-                        def dependencyNode = dependenciesNode.appendNode('dependency')
-                        dependencyNode.appendNode('groupId', it.group)
-                        dependencyNode.appendNode('artifactId', it.name)
-                        dependencyNode.appendNode('version', it.version)
-                    }
-                }
-                artifact androidSourcesJar
-                artifact androidJavadocsJar
-            }
-        }
-    }
-    signing {
-        useInMemoryPgpKeys(
-                System.getenv("PGP_KEYID"),
-                System.getenv("PGP_KEY"),
-                System.getenv("PGP_PASSWORD"),
-        )
-        sign publishing.publications
-    }
-}
-
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -144,6 +94,4 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
-
-    dokkaHtmlPlugin "org.jetbrains.dokka:kotlin-as-java-plugin:$dokka_version"
 }
