--- a/scripts/publish_root.gradle
+++ b/scripts/publish_root.gradle
@@ -1,8 +1,9 @@
 nexusPublishing {
     repositories {
         sonatype {
-            //nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
-            //snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            //nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
             username = System.getenv("SONATYPE_USERNAME")
             password = System.getenv("SONATYPE_PASSWORD")
             stagingProfileId = System.getenv("SONATYPE_STAGINGPROFILEID")
