--- a/sbbml/build.gradle
+++ b/sbbml/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply from: '../version-code.gradle'
 
 ext {
-    PUBLISH_GROUP_ID = 'ch.sbb.mobile.ml'
+    PUBLISH_GROUP_ID = 'ch.sbb'
     PUBLISH_VERSION = PUBLISH_VERSION
     PUBLISH_ARTIFACT_ID = 'sbbml'
 }
