--- a/scripts/publish_root.gradle
+++ b/scripts/publish_root.gradle
@@ -8,6 +8,10 @@ ext["signing.key"] = System.getenv('PGP_KEY')
 nexusPublishing {
     repositories {
         sonatype {
+            useStaging.set(provider {
+                val release: MavenPublication by publishing.publications
+                release.version.endsWith("-SNAPSHOT")
+            })
             stagingProfileId = sonatypeStagingProfileId
             //nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
             //snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
