--- a/.github/workflows/publish_to_maven.yml
+++ b/.github/workflows/publish_to_maven.yml
@@ -1,9 +1,10 @@
 name: Publish package to the Maven Central Repository
 on:
-  #release:
-  #  types: [synchronize]
-  push:
-    branches: [ main ]
+  label:
+    types:
+      - created
+  #push:
+  #  branches: [ main ]
 jobs:
   publish:
     name: Release build and publish
