--- a/.github/workflows/publish_to_maven.yml
+++ b/.github/workflows/publish_to_maven.yml
@@ -1,8 +1,8 @@
 name: Publish package to the Maven Central Repository
 on:
-  label:
-    types:
-      - created
+  release:
+    types: [published]
+
   #push:
   #  branches: [ main ]
 jobs:
