--- a/.github/workflows/publish_to_maven.yml
+++ b/.github/workflows/publish_to_maven.yml
@@ -2,9 +2,8 @@ name: Publish package to the Maven Central Repository
 on:
   release:
     types: [published]
-
-  #push:
-  #  branches: [ main ]
+  push:
+    branches: [main]
 jobs:
   publish:
     name: Release build and publish
