--- a/.github/workflows/publish_to_maven.yml
+++ b/.github/workflows/publish_to_maven.yml
@@ -1,9 +1,13 @@
 name: Publish package to the Maven Central Repository
+
+# release is triggered when the release is created and published on github.
 on:
   release:
     types: [published]
-  push:
-    branches: [main]
+
+# this could be used to create snapshot releases but for some reason they are not correctly deployed at the moment to the snapshot repo.
+#  push:
+#    branches: [main]
 jobs:
   publish:
     name: Release build and publish
@@ -30,7 +34,7 @@ jobs:
 
     # Runs upload, and then closes & releases the repository
     - name: Publish to MavenCentral
-      run: ./gradlew sbbml:publishReleasePublicationToSonatypeRepository --stacktrace # use this cmd to avoid nexus release approve: --max-workers 1 closeAndReleaseSonatypeStagingRepository
+      run: ./gradlew sbbml:publishReleasePublicationToSonatypeRepository --stacktrace # use this cmd to avoid nexus release approve in nexus repo manager : --max-workers 1 closeAndReleaseSonatypeStagingRepository
       env:
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
         SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
