--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
-PUBLISH_VERSION=1.0.4
+PUBLISH_VERSION=1.0.5
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx4096m -XX\:MaxPermSize\=1024m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
+org.gradle.jvmargs=-Xmx4096m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 android.useAndroidX=true
 android.enableJetifier=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
