--- a/demoapp/build.gradle
+++ b/demoapp/build.gradle
@@ -2,12 +2,13 @@ apply plugin: 'com.android.application'
 apply from: '../version-code.gradle'
 
 android {
-    compileSdk 34
+    compileSdkVersion 31
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
         applicationId "ch.sbb.mobile.ml.demo"
         minSdkVersion 25
-        targetSdkVersion 34
+        targetSdkVersion 31
         versionCode generateVersionCode()
         versionName PUBLISH_VERSION
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -15,7 +16,6 @@ android {
 
     buildFeatures {
         viewBinding true
-        buildConfig true
     }
 
     buildTypes {
@@ -24,22 +24,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    aaptOptions {
+        noCompress "tflite"
+    }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+    lintOptions {
+        abortOnError false
     }
     flavorDimensions "tfliteInference"
     productFlavors {
        interpreter {
            dimension "tfliteInference"
        }
-    }
-    namespace 'ch.sbb.mobile.ml.demo'
-    androidResources {
-        noCompress 'tflite'
-    }
-    lint {
-        abortOnError false
     }
 
     applicationVariants.all { variant ->
@@ -57,13 +56,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     interpreterImplementation project(':sbbml')
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
-    implementation 'com.google.android.material:material:1.10.0'
-    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'com.google.truth:truth:1.0.1'
-    androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
 }
