--- a/sbbml/build.gradle
+++ b/sbbml/build.gradle
@@ -13,11 +13,12 @@ apply from: "${rootProject.projectDir}/scripts/publish_module.gradle"
 println "VER" + PUBLISH_VERSION
 
 android {
-    compileSdk 34
+    compileSdkVersion 31
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
         minSdkVersion 25
-        targetSdk 34
+        targetSdkVersion 31
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         renderscriptTargetApi 31
@@ -42,10 +43,18 @@ android {
         }
     }
 
+    aaptOptions {
+        noCompress "tflite"
+    }
+
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     externalNativeBuild {
@@ -55,15 +64,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = "17"
-    }
-    namespace 'ch.sbb.mobile.ml'
-    androidResources {
-        noCompress 'tflite'
-    }
-    lint {
-        abortOnError false
-        checkReleaseBuilds false
+        jvmTarget = "11"
     }
 }
 
@@ -77,19 +78,19 @@ if (JavaVersion.current().isJava8Compatible()) {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     implementation 'org.tensorflow:tensorflow-lite:2.7.0'
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
     implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
     implementation 'org.tensorflow:tensorflow-lite-gpu:2.7.0'
-    implementation "androidx.core:core-ktx:1.12.0"
+    implementation "androidx.core:core-ktx:1.7.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'com.google.truth:truth:1.0.1'
-    androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation 'androidx.test:rules:1.5.0'
-    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
 }
