--- a/demoapp/build.gradle
+++ b/demoapp/build.gradle
@@ -2,13 +2,12 @@ apply plugin: 'com.android.application'
 apply from: '../version-code.gradle'
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion '30.0.3'
+    compileSdkVersion 36
 
     defaultConfig {
         applicationId "ch.sbb.mobile.ml.demo"
         minSdkVersion 25
-        targetSdkVersion 31
+        targetSdkVersion 36
         versionCode generateVersionCode()
         versionName PUBLISH_VERSION
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -28,8 +27,8 @@ android {
         noCompress "tflite"
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
     lintOptions {
         abortOnError false
@@ -40,6 +39,7 @@ android {
            dimension "tfliteInference"
        }
     }
+    namespace 'ch.sbb.mobile.ml.demo'
 
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
@@ -56,13 +56,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     interpreterImplementation project(':sbbml')
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.3.0'
+    implementation 'com.google.android.material:material:1.13.0'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'com.google.truth:truth:1.0.1'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'com.google.truth:truth:1.4.5'
+    androidTestImplementation 'androidx.test:runner:1.7.0'
+    androidTestImplementation 'androidx.test:rules:1.7.0'
 }
