--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,10 @@
-PUBLISH_VERSION=1.0.5
+PUBLISH_VERSION=1.0.6
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx4096m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 android.useAndroidX=true
 android.enableJetifier=true
+android.nonTransitiveRClass=false
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
