--- a/sbbml/build.gradle
+++ b/sbbml/build.gradle
@@ -13,15 +13,14 @@ apply from: "${rootProject.projectDir}/scripts/publish_module.gradle"
 println "VER" + PUBLISH_VERSION
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion '30.0.3'
+    compileSdkVersion 36
 
     defaultConfig {
         minSdkVersion 25
-        targetSdkVersion 31
+        targetSdkVersion 36
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        renderscriptTargetApi 31
+        renderscriptTargetApi 36
         renderscriptSupportModeEnabled true
 
         ndk {
@@ -31,7 +30,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags ""
-                arguments '-DANDROID_STL=c++_shared'
+                arguments '-DANDROID_STL=c++_shared', '-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON'
             }
         }
     }
@@ -53,8 +52,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
 
     externalNativeBuild {
@@ -64,8 +63,9 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = "21"
     }
+    namespace 'ch.sbb.mobile.ml'
 }
 
 // see http://blog.joda.org/2014/02/turning-off-doclint-in-jdk-8-javadoc.html
@@ -78,19 +78,19 @@ if (JavaVersion.current().isJava8Compatible()) {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    implementation 'org.tensorflow:tensorflow-lite:2.7.0'
-    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
-    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
-    implementation 'org.tensorflow:tensorflow-lite-gpu:2.7.0'
-    implementation "androidx.core:core-ktx:1.7.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.tensorflow:tensorflow-lite:2.17.0'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.5.0'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.5.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.17.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu-api:2.17.0'
+    implementation "androidx.core:core-ktx:1.17.0"
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'com.google.truth:truth:1.0.1'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'com.google.truth:truth:1.4.5'
+    androidTestImplementation 'androidx.test:runner:1.7.0'
+    androidTestImplementation 'androidx.test:rules:1.7.0'
+    androidTestImplementation "androidx.test.ext:junit:1.3.0"
 }
