--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -26,7 +26,7 @@ jobs:
 
   android_tests:
 
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -35,13 +35,17 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-
+      - name: Enable KVM group perms
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 36
-          arch: x86
+          arch: x86_64
           disable-animations: true
           script: ./gradlew connectedAndroidTest --stacktrace
