--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 36
+          api-level: 35-ext15
           arch: x86_64
           disable-animations: true
           script: ./gradlew connectedAndroidTest --stacktrace
