--- a/.github/workflows/android_tests.yml
+++ b/.github/workflows/android_tests.yml
@@ -12,12 +12,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: set up JDK 11
+    - name: set up JDK 21
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '21'
         distribution: 'temurin'
-        cache: gradle
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
@@ -26,23 +25,27 @@ jobs:
 
   android_tests:
 
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: set up JDK 11
+      - name: set up JDK 21
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: '21'
           distribution: 'temurin'
-          cache: gradle
-
+      - name: Enable KVM group perms
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
-          arch: x86
+          api-level: 36
+          target: google_apis
+          arch: x86_64
           disable-animations: true
           script: ./gradlew connectedAndroidTest --stacktrace
